--- a/index.html
+++ b/index.html
@@ -1,16 +1,57 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandala Fotográfica - Vitorianna Semijoias</title>
-    <link rel="shortcut icon" href="img/cropped-favicon-192x192.png" type="image/x-icon">
+    <meta name="description" content="PEÇA JÁ A SUA ETERNIZE MOMENTOS E PESSOAS ESPECIAIS Conheça mais desta joia que tem encantado tantos clientes que procuram">
+    <link rel="shortcut icon" href="img/favicon-192x192.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-57BMN48');</script>
+    <!-- End Google Tag Manager -->
    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-713236178"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-713236178');
+    </script>
+
+    <!-- Meta Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1113188295819529');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1113188295819529&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+
 </head>
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-57BMN48"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- inicio parte header -->
     <header class="header">
@@ -21,7 +62,7 @@
         </section>
 
         <section class="header-2">
-            <h1><a href="https://vitorianna.com.br/"><img src="img/topo-site1-768x169.jpg" alt=""></a></h1>
+            <h1><img src="img/logo-topo-site.jpg" alt="logo da marca vitorianna"></h1>
         </section>
     </header>
     <!-- fim parte header -->
@@ -29,28 +70,34 @@
     <!-- inicio parte main -->
     <main class="principal">
         <section class="foto-banner">
-            <img src="img/banner-mandala.jpg" alt="">
+            <img src="img/banner-mandala.jpg" alt="imagem banner contendo uma imagem do produto mandala com uma chamada para ação: conheça agora">
+        </section>
+
+        <section class="icons">
+            <p><i class="bi bi-truck"></i> Frete grátis para Sudeste</p>
+            <p><i class="bi bi-credit-card"></i> Parcele em até 5X Sem Juros</p>
+            <p><i class="bi bi-shield-check"></i> Garantia de 3 meses</p>
         </section>
 
         <section class="peca-sua">
             <h2>ETERNIZE MOMENTOS E PESSOAS ESPECIAIS</h2>
             <p>Conheça mais desta joia que tem encantado tantos clientes que procuram por um presente personalizado e exclusivo.</p>
-            <button class="btn-peca-sua"> <a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/">Peça já a sua</a></button>
+            <button class="btn-peca-sua"> <a href="https://api.whatsapp.com/send?phone=5521970660460">Peça já a sua</a></button>
         </section>
 
         <section class="cards-fotos">
             <div class="card" data-aos="fade-up">
-                <img src="img/mandala-rodio2.jpg" alt="">
+                <img src="img/foto-mandala-meninas.jpg" alt="imagem de uma mandala com a foto de duas crianças">
                 <h3>UMA VERDADEIRA JOIA</h3>
                 <p>Nossa mandala fotográfica é uma semijoia e possui em sua composição um banho de 10 camadas de ouro 18klts e é cravejada artesanalmente com zircônias brancas.</p>
             </div>
             <div class="card" data-aos="fade-up">
-                <img src="img/mandala-exemplo-.jpg" alt="">
+                <img src="img/foto-mandala-casal.jpg" alt="imagem de um mandala com uma foto de um casal de homem e mulher">
                 <h3>UMA IMPRESSÃO COLORIDA QUE NÃO DESBOTA</h3>
                 <p>Nossa alta tecnologia de impressão é produzida em aço inox e não desbota. Ou seja, sua joia estará intacta durante anos.</p>
             </div>
             <div class="card" data-aos="fade-up">
-                <img src="img/20220622_1525292.jpg" alt="">
+                <img src="img/foto-mandala-criancas.jpg" alt="imagem de uma mandala com três crianças">
                 <h3>RESPEITAMOS SUA PELE</h3>
                 <p>Pensando nas peles mais sensíveis, desenvolvemos o melhor banho com verniz hipoalergênico para evitar qualquer tipo de alergias.</p>
             </div>
@@ -58,21 +105,21 @@
 
         <section class="indicacao">
             <div class="indicacao-txt">
-                <img src="img/sucesso-absoluto-de-vendas.jpg" alt="">
+                <img src="img/mensagem-feedback.jpg" alt="imagem contendo mensagens de WhatsApp mandada pelos clientes em um tom de satisfação">
             </div>
             <div class="slider">
                 <div class="slider-container">
                     <div class="video-slide">
-                        <video controls class="video" src="videos/InShot_20220322_140826507.mp4" autoplay muted loop></video>
+                        <video controls class="video" src="videos/video-1.mp4" autoplay muted loop></video>
                     </div>
                     <div class="video-slide">
-                        <video controls class="video" src="videos/InShot_20220322_141226768.mp4" autoplay muted loop></video>
+                        <video controls class="video" src="videos/video-2.mp4" autoplay muted loop></video>
                     </div>
                     <div class="video-slide">
-                        <video controls class="video" src="videos/InShot_20220629_162502763.mp4" autoplay muted loop></video>
+                        <video controls class="video" src="videos/video-3.mp4" autoplay muted loop></video>
                     </div>
                     <div class="video-slide">
-                        <video controls class="video" src="videos/lv_0_20220629141906.mp4" autoplay muted loop></video>
+                        <video controls class="video" src="videos/video-4.mp4" autoplay muted loop></video>
                     </div>
                 </div>
                 <button id="prevBtn">&#171;</button>
@@ -82,8 +129,8 @@
 
         <section class="promocao">
             <h2>Valor Promocional</h2>
-            <img src="img/valor.jpg" alt="">
-            <button class="btn-peca-sua"><a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/">Peça já a sua</a></button>
+            <img src="img/valor.jpg" alt="Imagem contendo o valor da mandala 'Valor promocinal de R$ 359,90 por 5X R$ 51,98 sem juros'">
+            <button class="btn-peca-sua"><a href="https://api.whatsapp.com/send?phone=5521970660460">Peça já a sua</a></button>
         </section>
 
         <section class="compra-garantida">
@@ -118,31 +165,51 @@
         <div class="largura-max">
             <section class="sobre footer-div">
                 <h3>SOBRE</h3>
-                <a href=""><p>Sobre a Vitorianna</p></a>
-                <a href=""><p>Política de Privacidade</p></a>
-                <a href=""><p>Seja uma Revendedora</p></a>
+                <a href="https://vitorianna.com.br/sobre-a-vitorianna/">
+                    <p>Sobre a Vitorianna</p>
+                </a>
+                <a href="https://vitorianna.com.br/politica-de-privacidade/">
+                    <p>Política de Privacidade</p>
+                </a>
+                <a href="https://vitorianna.com.br/entrega/">
+                    <p>Prazos e Formas de Envio</p>
+                </a>
             </section>
 
             <section class="ajuda footer-div">
                 <h3>AJUDA E SUPORTE</h3>
-                <a href=""><p>Sobre a Vitorianna</p></a>
-                <a href=""><p>Política de Privacidade</p></a>
-                <a href=""><p>Seja uma Revendedora</p></a>
+                <a href="https://vitorianna.com.br/termos-e-condicoes/">
+                    <p>Termos e Condições</p>
+                </a>
+                <a href="https://vitorianna.com.br/cuidados-com-o-produto/">
+                    <p>Cuidados com o Produto</p>
+                </a>
+                <a href="https://vitorianna.com.br/contato/">
+                    <p>Contato</p>
+                </a>
             </section>
 
             <section class="termos footer-div">
-                <i class="bi bi-facebook"></i>
-                <i class="bi bi-instagram"></i>
-                <i class="bi bi-whatsapp"></i>
+                <a href="https://www.facebook.com/vitorianna">
+                    <i class="bi bi-facebook"></i>
+                </a>
+                <a href="https://www.instagram.com/vitorianna_oficial/">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=5521970660460">
+                    <i class="bi bi-whatsapp"></i>
+                </a>
             </section>
         </div>
     </footer>
     <section class="sloth">
-        <img src="img/LOGO-SLOTH-1024x461-1.png" alt="">
+        <a href="https://slothmarketingdigital.com.br/" target="_blank">
+            <img src="img/logo-sloth.png" alt="Imagem logo da empresa que desenvolvel essa landing page Sloth Marketing">
+        </a>
     </section>
 
     <div class="btn-whatsapp">
-        <i><img src="img/icons8-whatsapp-96.png" alt=""></i>
+        <a href="https://api.whatsapp.com/send?phone=5521970660460"><i><img src="img/icons8-whatsapp-96.png" alt="Botão do WhatsApp"></i></a>
     </div>
     <!-- fim footer -->
     <script src="js/script.js"></script>
