Alterando link de checkout

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="peca-sua">
             <h2>ETERNIZE MOMENTOS E PESSOAS ESPECIAIS</h2>
             <p>Conheça mais desta joia que tem encantado tantos clientes que procuram por um presente personalizado e exclusivo.</p>
-            <button class="btn-peca-sua"> <a href="https://api.whatsapp.com/send?phone=5521970660460">Peça já a sua</a></button>
+            <button class="btn-peca-sua"> <a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/">Peça já a sua</a></button>
         </section>
 
         <section class="cards-fotos">
@@ -124,7 +124,7 @@
         <section class="promocao">
             <h2>Valor Promocional</h2>
             <img src="img/valor.jpg" alt="Imagem contendo o valor da mandala 'Valor promocinal de R$ 359,90 por 5X R$ 51,98 sem juros'">
-            <button class="btn-peca-sua"><a href="https://api.whatsapp.com/send?phone=5521970660460">Peça já a sua</a></button>
+            <button class="btn-peca-sua"><a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/">Peça já a sua</a></button>
         </section>
 
         <section class="compra-garantida">
