Add atributo target _blank nos links

--- a/mandala.html
+++ b/mandala.html
@@ -56,7 +56,7 @@
     <!-- inicio parte header -->
     <header class="header">
         <section class="header-2">
-            <h1><img src="img/logo-topo-site.jpg" alt="logo da marca vitorianna"></h1>
+            <h1><a href="https://vitorianna.com.br" target="_blank"><img src="img/logo-topo-site.jpg" alt="logo da marca vitorianna"></a></h1>
         </section>
     </header>
     <!-- fim parte header -->
@@ -124,7 +124,7 @@
         <section class="promocao">
             <h2>Valor Promocional</h2>
             <img src="img/valor.jpg" alt="Imagem contendo o valor da mandala 'Valor promocinal de R$ 359,90 por 5X R$ 51,98 sem juros'">
-            <button class="btn-peca-sua"><a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/">Peça já a sua</a></button>
+            <button class="btn-peca-sua"><a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/" target="_blank">Peça já a sua</a></button>
         </section>
 
         <section class="compra-garantida">
@@ -159,38 +159,38 @@
         <div class="largura-max">
             <section class="sobre footer-div">
                 <h3>SOBRE</h3>
-                <a href="https://vitorianna.com.br/sobre-a-vitorianna/">
+                <a href="https://vitorianna.com.br/sobre-a-vitorianna/" target="_blank">
                     <p>Sobre a Vitorianna</p>
                 </a>
-                <a href="https://vitorianna.com.br/politica-de-privacidade/">
+                <a href="https://vitorianna.com.br/politica-de-privacidade/" target="_blank">
                     <p>Política de Privacidade</p>
                 </a>
-                <a href="https://vitorianna.com.br/entrega/">
+                <a href="https://vitorianna.com.br/entrega/" target="_blank">
                     <p>Prazos e Formas de Envio</p>
                 </a>
             </section>
 
             <section class="ajuda footer-div">
                 <h3>AJUDA E SUPORTE</h3>
-                <a href="https://vitorianna.com.br/termos-e-condicoes/">
+                <a href="https://vitorianna.com.br/termos-e-condicoes/" target="_blank">
                     <p>Termos e Condições</p>
                 </a>
-                <a href="https://vitorianna.com.br/cuidados-com-o-produto/">
+                <a href="https://vitorianna.com.br/cuidados-com-o-produto/" target="_blank">
                     <p>Cuidados com o Produto</p>
                 </a>
-                <a href="https://vitorianna.com.br/contato/">
+                <a href="https://vitorianna.com.br/contato/" target="_blank">
                     <p>Contato</p>
                 </a>
             </section>
 
             <section class="termos footer-div">
-                <a href="https://www.facebook.com/vitorianna">
+                <a href="https://www.facebook.com/vitorianna" target="_blank">
                     <i class="bi bi-facebook"></i>
                 </a>
-                <a href="https://www.instagram.com/vitorianna_oficial/">
+                <a href="https://www.instagram.com/vitorianna_oficial/" target="_blank">
                     <i class="bi bi-instagram"></i>
                 </a>
-                <a href="https://api.whatsapp.com/send?phone=5521970660460">
+                <a href="https://api.whatsapp.com/send?phone=5521970660460" target="_blank">
                     <i class="bi bi-whatsapp"></i>
                 </a>
             </section>
@@ -203,7 +203,7 @@
     </section>
 
     <div class="btn-whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5521970660460"><i><img src="img/icons8-whatsapp-96.png" alt="Botão do WhatsApp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=5521970660460" target="_blank"><i><img src="img/icons8-whatsapp-96.png" alt="Botão do WhatsApp"></i></a>
     </div>
     <!-- fim footer -->
     <script src="js/script.js"></script>
