Alterando atributo target _blank de um elemento para outro

--- a/mandala.html
+++ b/mandala.html
@@ -56,7 +56,7 @@
     <!-- inicio parte header -->
     <header class="header">
         <section class="header-2">
-            <h1><a href="https://vitorianna.com.br" target="_blank"><img src="img/logo-topo-site.jpg" alt="logo da marca vitorianna"></a></h1>
+            <h1><a href="https://vitorianna.com.br"><img src="img/logo-topo-site.jpg" alt="logo da marca vitorianna"></a></h1>
         </section>
     </header>
     <!-- fim parte header -->
@@ -76,7 +76,7 @@
         <section class="peca-sua">
             <h2>ETERNIZE MOMENTOS E PESSOAS ESPECIAIS</h2>
             <p>Conheça mais desta joia que tem encantado tantos clientes que procuram por um presente personalizado e exclusivo.</p>
-            <button class="btn-peca-sua"> <a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/">Peça já a sua</a></button>
+            <button class="btn-peca-sua"> <a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/" target="_blank">Peça já a sua</a></button>
         </section>
 
         <section class="cards-fotos">
