Alterando o link do banner principal

--- a/mandala.html
+++ b/mandala.html
@@ -64,7 +64,7 @@
     <!-- inicio parte main -->
     <main class="principal">
         <section class="foto-banner">
-            <a href="https://vitorianna.com.br" target="_blank"><img src="img/banner-mandala.jpg" alt="imagem banner contendo uma imagem do produto mandala com uma chamada para ação: conheça agora"></a>
+            <a href="https://vitorianna.com.br/produto/colar-mandala-fotografica-personalizada/" target="_blank"><img src="img/banner-mandala.jpg" alt="imagem banner contendo uma imagem do produto mandala com uma chamada para ação: conheça agora"></a>
         </section>
 
         <section class="icons">
